--- a/pages/asteroid-belt.html
+++ b/pages/asteroid-belt.html
@@ -82,105 +82,107 @@
 
         <!--Title on the main page-->
 
-        <h1 class="bigpageheader">Asteroid belt</h1>
-        <!--<h2 class="smallpageheader">Geography of the planets</h2>-->
-
-        <!--The main page article-->
-
-        <section class="maincontent">
-            <p class="paragraph">
-                The asteroid belt is a region in the Solar System, located roughly between the orbits of the <a href="planet.html">planets</a> <a href="jupiter.html">Jupiter</a> and <a href="mars.html">Mars</a>. 
-                It contains many irregularly shaped bodies called asteroids or minor planets. 
-                This asteroid belt is also known as the main asteroid belt to distinguish it from other asteroid populations such as near-Earth asteroids and trojan asteroids.</p>
-            <h2 class="paragraphheader" id="DiscoveryOfTheAsteroidBelt">Discovery of the asteroid belt</h2>
-            <p class="paragraph">
-                In 1596, Johannes Kepler assumed that there must be a planet between Mars and Jupiter, due to the gap between the planets. 
-                Three centuries later, in 1801, the first asteroid was discovered. 
-                It was named Ceres after the Roman goddess of harvest.
-            </p>
-            <p class="paragraph">
-                Soon, other objects were discovered - Pallas, Juno, Vesta and Astraea. 
-                Scientists decided to classify the objects separately from the planets, calling them "asteroids" instead.
-            </p>
-            <p class="paragraph">
-                Today, there are over half a million discovered asteroids, many of which are located in the belt.
-            </p>
-            <h2 class="paragraphheader" id="AsteroidsOfTheAsteroidBelt">Asteroids in the asteroid belt</h2>
-            <p class="paragraph">This is a list of the largest asteroids in the asteroid belt.</p>
-            <div class="wrapper">
-                <table>
-                    <tr class="firstrow">
-                        <th>Name</th><th>Diameter</th><th>Discovery Year</th><th>Discoverer</th><th>Class</th>
-                    </tr>
-                    <tr>
-                        <th>1 Ceres</th><th>939.4±0.2</th><th>1801</th><th>Piazzi, G.</th><th>G</th>
-                    </tr>
-                    <tr>
-                        <th>4 Vesta</th><th>525.4±0.2</th><th>1807</th><th>Olbers, H. W.</th><th>V</th>
-                    </tr>
-                    <tr>
-                        <th>2 Pallas</th><th>511±4</th><th>1802</th><th>Olbers, H. W.</th><th>B</th>
-                    </tr>
-                    <tr>
-                        <th>10 Hygiea</th><th>433±8</th><th>1849</th><th>de Gasparis, A.</th><th>C</th>
-                    </tr>
-                    <tr>
-                        <th>704 Interamnia</th><th>332±5</th><th>1910</th><th>Cerulli, V.</th><th>F</th>
-                    </tr>
-                    <tr>
-                        <th>52 Europa</th><th>319±4</th><th>1858</th><th>Goldschmidt, H.</th><th>C</th>
-                    </tr>
-                    <tr>
-                        <th>511 Davida</th><th>298±4</th><th>1903</th><th>Dugan, R. S.</th><th>C</th>
-                    </tr>
-                    <tr>
-                        <th>87 Sylvia</th><th>274±4</th><th>1866</th><th>Pogson, N. R.</th><th>X</th>
-                    </tr>
-                    <tr>
-                        <th>15 Eunomia</th><th>270±3</th><th>1851</th><th>de Gasparis, A.</th><th>S</th>
-                    </tr>
-                    <tr>
-                        <th>31 Euphrosyne</th><th>268±4</th><th>1854</th><th>Ferguson, J.</th><th>C</th>
-                    </tr>
-                </table>
-            </div>
-            <div class="articlediv">
-                <div class="captionbox right">
-                    <img class="articleimage" src="../assets/images/asteroids/ceres.jpg" alt="Ceres" width="245" height="240">
-                    <p class="caption">Ceres</p>
-                </div>
-                <h3 class="paragraphsubheader" id="Ceres">Ceres</h3>
+        <div class="maincolumn">
+            <h1 class="bigpageheader">Asteroid belt</h1>
+            <!--<h2 class="smallpageheader">Geography of the planets</h2>-->
+         
+            <!--The main page article-->
+         
+            <section class="maincontent">
                 <p class="paragraph">
-                    Ceres is the first asteroid to be discovered. 
-                    It is the biggest of the asteroids in the asteroid belt and is the only such one to be a dwarf planet. 
-                    It is named after the Roman goddess of agriculture and fertility. 
-                    The surface of the asteroid consists of ice and carbonates. 
-                    Cryovolcanism activity shapes the surface of the dwarf planet, thanks to which many bright spots in craters and a single mountain (Ahuna Mons) exist.
-                </p>
-            </div>
-            <div class="articlediv">
-                <div class="captionbox right">
-                    <img class="articleimage" src="../assets/images/asteroids/vesta.jpg" alt="Vesta" width="240" height="240">
-                    <p class="caption">Vesta</p>
-                </div>
-                <h3 class="paragraphsubheader" id="Vesta">Vesta</h3>
+                    The asteroid belt is a region in the Solar System, located roughly between the orbits of the <a href="planet.html">planets</a> <a href="jupiter.html">Jupiter</a> and <a href="mars.html">Mars</a>. 
+                    It contains many irregularly shaped bodies called asteroids or minor planets. 
+                    This asteroid belt is also known as the main asteroid belt to distinguish it from other asteroid populations such as near-Earth asteroids and trojan asteroids.</p>
+                <h2 class="paragraphheader" id="DiscoveryOfTheAsteroidBelt">Discovery of the asteroid belt</h2>
                 <p class="paragraph">
-                    Vesta is the second biggest asteroid in the asteroid belt. 
-                    It is named after the Roman goddess of the home and family. 
-                    Vesta's shape is close to an oblate spheroid, but is not a dwarf planet, because it is not in hydrostatic equilibrium.
+                    In 1596, Johannes Kepler assumed that there must be a planet between Mars and Jupiter, due to the gap between the planets. 
+                    Three centuries later, in 1801, the first asteroid was discovered. 
+                    It was named Ceres after the Roman goddess of harvest.
                 </p>
-            </div>
-            <h3 class="paragraphsubheader"></h3>
-            <h4 id="ExternalLinks">External links</h4>
-            <ul>
-                <li>
-                    <a href="https://en.wikipedia.org/wiki/Asteroid_belt">https://en.wikipedia.org/wiki/Asteroid_belt</a>
-                </li>
-                <li>
-                    <a href="https://en.wikipedia.org/wiki/List_of_exceptional_asteroids">https://en.wikipedia.org/wiki/List_of_exceptional_asteroids</a>
-                </li>
-            </ul>
-        </section>
+                <p class="paragraph">
+                    Soon, other objects were discovered - Pallas, Juno, Vesta and Astraea. 
+                    Scientists decided to classify the objects separately from the planets, calling them "asteroids" instead.
+                </p>
+                <p class="paragraph">
+                    Today, there are over half a million discovered asteroids, many of which are located in the belt.
+                </p>
+                <h2 class="paragraphheader" id="AsteroidsOfTheAsteroidBelt">Asteroids in the asteroid belt</h2>
+                <p class="paragraph">This is a list of the largest asteroids in the asteroid belt.</p>
+                <div class="wrapper">
+                    <table>
+                        <tr class="firstrow">
+                            <th>Name</th><th>Diameter</th><th>Discovery Year</th><th>Discoverer</th><th>Class</th>
+                        </tr>
+                        <tr>
+                            <th>1 Ceres</th><th>939.4±0.2</th><th>1801</th><th>Piazzi, G.</th><th>G</th>
+                        </tr>
+                        <tr>
+                            <th>4 Vesta</th><th>525.4±0.2</th><th>1807</th><th>Olbers, H. W.</th><th>V</th>
+                        </tr>
+                        <tr>
+                            <th>2 Pallas</th><th>511±4</th><th>1802</th><th>Olbers, H. W.</th><th>B</th>
+                        </tr>
+                        <tr>
+                            <th>10 Hygiea</th><th>433±8</th><th>1849</th><th>de Gasparis, A.</th><th>C</th>
+                        </tr>
+                        <tr>
+                            <th>704 Interamnia</th><th>332±5</th><th>1910</th><th>Cerulli, V.</th><th>F</th>
+                        </tr>
+                        <tr>
+                            <th>52 Europa</th><th>319±4</th><th>1858</th><th>Goldschmidt, H.</th><th>C</th>
+                        </tr>
+                        <tr>
+                            <th>511 Davida</th><th>298±4</th><th>1903</th><th>Dugan, R. S.</th><th>C</th>
+                        </tr>
+                        <tr>
+                            <th>87 Sylvia</th><th>274±4</th><th>1866</th><th>Pogson, N. R.</th><th>X</th>
+                        </tr>
+                        <tr>
+                            <th>15 Eunomia</th><th>270±3</th><th>1851</th><th>de Gasparis, A.</th><th>S</th>
+                        </tr>
+                        <tr>
+                            <th>31 Euphrosyne</th><th>268±4</th><th>1854</th><th>Ferguson, J.</th><th>C</th>
+                        </tr>
+                    </table>
+                </div>
+                <div class="articlediv">
+                    <div class="captionbox right">
+                        <img class="articleimage" src="../assets/images/asteroids/ceres.jpg" alt="Ceres" width="245" height="240">
+                        <p class="caption">Ceres</p>
+                    </div>
+                    <h3 class="paragraphsubheader" id="Ceres">Ceres</h3>
+                    <p class="paragraph">
+                        Ceres is the first asteroid to be discovered. 
+                        It is the biggest of the asteroids in the asteroid belt and is the only such one to be a dwarf planet. 
+                        It is named after the Roman goddess of agriculture and fertility. 
+                        The surface of the asteroid consists of ice and carbonates. 
+                        Cryovolcanism activity shapes the surface of the dwarf planet, thanks to which many bright spots in craters and a single mountain (Ahuna Mons) exist.
+                    </p>
+                </div>
+                <div class="articlediv">
+                    <div class="captionbox right">
+                        <img class="articleimage" src="../assets/images/asteroids/vesta.jpg" alt="Vesta" width="240" height="240">
+                        <p class="caption">Vesta</p>
+                    </div>
+                    <h3 class="paragraphsubheader" id="Vesta">Vesta</h3>
+                    <p class="paragraph">
+                        Vesta is the second biggest asteroid in the asteroid belt. 
+                        It is named after the Roman goddess of the home and family. 
+                        Vesta's shape is close to an oblate spheroid, but is not a dwarf planet, because it is not in hydrostatic equilibrium.
+                    </p>
+                </div>
+                <h3 class="paragraphsubheader"></h3>
+                <h4 id="ExternalLinks">External links</h4>
+                <ul>
+                    <li>
+                        <a href="https://en.wikipedia.org/wiki/Asteroid_belt">https://en.wikipedia.org/wiki/Asteroid_belt</a>
+                    </li>
+                    <li>
+                        <a href="https://en.wikipedia.org/wiki/List_of_exceptional_asteroids">https://en.wikipedia.org/wiki/List_of_exceptional_asteroids</a>
+                    </li>
+                </ul>
+            </section>
+        </div>
 
         <!--A footer-->
 
