--- a/pages/exoplanet.html
+++ b/pages/exoplanet.html
@@ -103,109 +103,111 @@
 
         <!--Title on the main page-->
 
-        <h1 class="bigpageheader">Exoplanet</h1>
-        <!--<h2 class="smallpageheader">Geography of the planets</h2>-->
-
-        <!--The main page article-->
-
-        <section class="maincontent">
-            <p class="paragraph">
-                Extrasolar planets, or exoplanets, are <a href="planet.html">planets</a> orbiting <a href="star.html">stars</a> different from the Sun. 
-                The first exoplanet was confirmed to exist in 1992. 
-                There are more than 5,000 known exoplanets.
-            </p>
-            <p class="paragraph">
-                Many methods are used for detecting exoplanets, from direct imaging to transit and radial detections.
-            </p>
-            <p class="paragraph">
-                The closest exoplanet, Proxima Centauri b, is located 4.2 light-years from <a href="earth.html">Earth</a> and orbits Proxima Centauri, the closest star to Earth.
-                The planet is a potentially habitable, orbiting Proxima in it's habitable zone.
-                Two other candidates may also orbit the star.
-            </p>
-            <h2 class="paragraphheader" id="Naming">Naming</h2>
-            <p class="paragraph">
-                Exoplanet names are assigned based on the name of a star, with an additional letter at the end of the name. 
-                The first planet to be discovered in a system is assigned a letter "b", with every new planet getting assigned the following letter of the alphabet. 
-                If more than one planet are found at once, letters are assigned in order of the innermost to the outermost of the planets.
-            </p>
-            <p class="paragraph">
-                For example, the star Kepler-186 has five known exoplanets - from Kepler-186 b (innermost) to Kepler-186 f (outermost).
-            </p>
-            <p class="paragraph">
-                The IAU holds naming contests for planets and their hosts stars. 
-                The closest planet to Earth with a proper name is Ægir, 10.5 light-years from Earth.
-            </p>
-            <h2 class="paragraphheader" id="DetectionMethods">Detection methods</h2>
-            <h3 class="paragraphsubheader" id="DirectImaging">Direct imaging</h3>
-            <p class="paragraph">
-                Exoplanets are hard to detect directly, since they don't reflect as much light as the parent <a href="star.html">star</a> releases. 
-                Every directly imaged exoplanet is more massive than <a href="jupiter.html">Jupiter</a> and far from the host star.
-            </p>
-            <h3 class="paragraphsubheader" id="PulsarTiming">Pulsar timing</h3>
-            <p class="paragraph">
-                Pulsars emit radio waves regularly. 
-                Once a planet orbiting a pulsar transits, it will cause slight anomalies in timing. 
-                The method is very precise and can detect planets smaller than <a href="earth.html">Earth</a>, but the rarity of pulsars and exoplanets orbiting them make this method highly unproductive.
-            </p>
-            <p class="paragraph">
-                The first exoplanets ever are Draugr, Poltergeist and Phobetor, which orbit the pulsar PSR B1257+12.
-            </p>
-            <h3 class="paragraphsubheader" id="Astrometry">Astrometry</h3>
-            <p class="paragraph">
-                Planets will influence the position of a star, due to gravity. 
-                This leads to small changes in the position of a star. 
-                With astrometry - the precise measurement of positions and movements of stars can detect planets. 
-                It has also detected very few planets.
-            </p>
-            <h3 class="paragraphsubheader" id="Microlensing">Microlensing</h3>
-            <p class="paragraph">
-                Gravitational fields of stars can magnify the light of distant background stars. 
-                Planets can cause anomalies in the detection of microlensing. 
-                This method is most sensitive to planets around 1-10 AU away from Sun-like stars.
-            </p>
-            <h3 class="paragraphsubheader" id="TransitDurationVariation">Transit duration variation</h3>
-            <p class="paragraph">
-                The transit time of planets around multiple stars or planets with <a href="natural-satellite.html">moons</a> will vary. 
-                No planet has been detected with this method, but circumbinary planets are successfuly confirmed with transit duration variation.
-            </p>
-            <p class="paragraph">
-                One such planet is Kepler-16b, which orbits two stars - Kepler-16 A and Kepler-16 B.
-            </p>
-            <h3 class="paragraphsubheader" id="TransitTimingVariation">Transit timing variation</h3>
-            <p class="paragraph">
-                When multiple exoplanets are present, each one slightly perturbs the others' orbits. 
-                Small variations in the times of transit for one planet can thus indicate the presence of another non-transiting planet.
-            </p>
-            <h3 class="paragraphsubheader" id="RadialVelocity">Radial velocity</h3>
-            <p class="paragraph">
-                Stars orbit around the center of the system. 
-                Due to the Doppler effect, variations in the star's radial velocity can be detected. 
-                This method can detect planets orbiting low-mass stars. 
-                It was the most productive method, until the transit method overtook it.
-            </p>
-            <h3 class="paragraphsubheader" id="Transit">Transit</h3>
-            <p class="paragraph">
-                Planets transiting in front of stars can change the observed brightness of the host star. 
-                This method detects planets with small orbits and has a high rate of false detections, but can determine more characteristics than other methods. 
-                The Kepler telescope used this method.
-            </p>
-            <h2 class="paragraphheader" id="Habitability">Habitability</h2>
-            <p class="paragraph">
-                Exoplanets are yet to be studied for life. 
-                One metric for measuring habitability is the location of a planet. 
-                If a planet is orbiting in the habitable zone of it's host <a href="star.html">star</a>, water could exist in all three states. 
-                Another metric is the size of a planet - planets with sizes similar to Earth are more likely to be similar in other aspects.
-            </p>
-            <h4 id="ExternalLinks">External links</h4>
-            <ul>
-                <li>
-                    <a href="https://exoplanets.nasa.gov">https://exoplanets.nasa.gov</a>
-                </li>
-                <li>
-                    <a href="https://en.wikipedia.org/wiki/Exoplanet">https://en.wikipedia.org/wiki/Exoplanet</a>
-                </li>
-            </ul>
-        </section>
+        <div class="maincolumn">
+            <h1 class="bigpageheader">Exoplanet</h1>
+            <!--<h2 class="smallpageheader">Geography of the planets</h2>-->
+         
+            <!--The main page article-->
+         
+            <section class="maincontent">
+                <p class="paragraph">
+                    Extrasolar planets, or exoplanets, are <a href="planet.html">planets</a> orbiting <a href="star.html">stars</a> different from the Sun. 
+                    The first exoplanet was confirmed to exist in 1992. 
+                    There are more than 5,000 known exoplanets.
+                </p>
+                <p class="paragraph">
+                    Many methods are used for detecting exoplanets, from direct imaging to transit and radial detections.
+                </p>
+                <p class="paragraph">
+                    The closest exoplanet, Proxima Centauri b, is located 4.2 light-years from <a href="earth.html">Earth</a> and orbits Proxima Centauri, the closest star to Earth.
+                    The planet is a potentially habitable, orbiting Proxima in it's habitable zone.
+                    Two other candidates may also orbit the star.
+                </p>
+                <h2 class="paragraphheader" id="Naming">Naming</h2>
+                <p class="paragraph">
+                    Exoplanet names are assigned based on the name of a star, with an additional letter at the end of the name. 
+                    The first planet to be discovered in a system is assigned a letter "b", with every new planet getting assigned the following letter of the alphabet. 
+                    If more than one planet are found at once, letters are assigned in order of the innermost to the outermost of the planets.
+                </p>
+                <p class="paragraph">
+                    For example, the star Kepler-186 has five known exoplanets - from Kepler-186 b (innermost) to Kepler-186 f (outermost).
+                </p>
+                <p class="paragraph">
+                    The IAU holds naming contests for planets and their hosts stars. 
+                    The closest planet to Earth with a proper name is Ægir, 10.5 light-years from Earth.
+                </p>
+                <h2 class="paragraphheader" id="DetectionMethods">Detection methods</h2>
+                <h3 class="paragraphsubheader" id="DirectImaging">Direct imaging</h3>
+                <p class="paragraph">
+                    Exoplanets are hard to detect directly, since they don't reflect as much light as the parent <a href="star.html">star</a> releases. 
+                    Every directly imaged exoplanet is more massive than <a href="jupiter.html">Jupiter</a> and far from the host star.
+                </p>
+                <h3 class="paragraphsubheader" id="PulsarTiming">Pulsar timing</h3>
+                <p class="paragraph">
+                    Pulsars emit radio waves regularly. 
+                    Once a planet orbiting a pulsar transits, it will cause slight anomalies in timing. 
+                    The method is very precise and can detect planets smaller than <a href="earth.html">Earth</a>, but the rarity of pulsars and exoplanets orbiting them make this method highly unproductive.
+                </p>
+                <p class="paragraph">
+                    The first exoplanets ever are Draugr, Poltergeist and Phobetor, which orbit the pulsar PSR B1257+12.
+                </p>
+                <h3 class="paragraphsubheader" id="Astrometry">Astrometry</h3>
+                <p class="paragraph">
+                    Planets will influence the position of a star, due to gravity. 
+                    This leads to small changes in the position of a star. 
+                    With astrometry - the precise measurement of positions and movements of stars can detect planets. 
+                    It has also detected very few planets.
+                </p>
+                <h3 class="paragraphsubheader" id="Microlensing">Microlensing</h3>
+                <p class="paragraph">
+                    Gravitational fields of stars can magnify the light of distant background stars. 
+                    Planets can cause anomalies in the detection of microlensing. 
+                    This method is most sensitive to planets around 1-10 AU away from Sun-like stars.
+                </p>
+                <h3 class="paragraphsubheader" id="TransitDurationVariation">Transit duration variation</h3>
+                <p class="paragraph">
+                    The transit time of planets around multiple stars or planets with <a href="natural-satellite.html">moons</a> will vary. 
+                    No planet has been detected with this method, but circumbinary planets are successfuly confirmed with transit duration variation.
+                </p>
+                <p class="paragraph">
+                    One such planet is Kepler-16b, which orbits two stars - Kepler-16 A and Kepler-16 B.
+                </p>
+                <h3 class="paragraphsubheader" id="TransitTimingVariation">Transit timing variation</h3>
+                <p class="paragraph">
+                    When multiple exoplanets are present, each one slightly perturbs the others' orbits. 
+                    Small variations in the times of transit for one planet can thus indicate the presence of another non-transiting planet.
+                </p>
+                <h3 class="paragraphsubheader" id="RadialVelocity">Radial velocity</h3>
+                <p class="paragraph">
+                    Stars orbit around the center of the system. 
+                    Due to the Doppler effect, variations in the star's radial velocity can be detected. 
+                    This method can detect planets orbiting low-mass stars. 
+                    It was the most productive method, until the transit method overtook it.
+                </p>
+                <h3 class="paragraphsubheader" id="Transit">Transit</h3>
+                <p class="paragraph">
+                    Planets transiting in front of stars can change the observed brightness of the host star. 
+                    This method detects planets with small orbits and has a high rate of false detections, but can determine more characteristics than other methods. 
+                    The Kepler telescope used this method.
+                </p>
+                <h2 class="paragraphheader" id="Habitability">Habitability</h2>
+                <p class="paragraph">
+                    Exoplanets are yet to be studied for life. 
+                    One metric for measuring habitability is the location of a planet. 
+                    If a planet is orbiting in the habitable zone of it's host <a href="star.html">star</a>, water could exist in all three states. 
+                    Another metric is the size of a planet - planets with sizes similar to Earth are more likely to be similar in other aspects.
+                </p>
+                <h4 id="ExternalLinks">External links</h4>
+                <ul>
+                    <li>
+                        <a href="https://exoplanets.nasa.gov">https://exoplanets.nasa.gov</a>
+                    </li>
+                    <li>
+                        <a href="https://en.wikipedia.org/wiki/Exoplanet">https://en.wikipedia.org/wiki/Exoplanet</a>
+                    </li>
+                </ul>
+            </section>
+        </div>
 
         <!--A footer-->
 
