--- a/pages/star.html
+++ b/pages/star.html
@@ -71,69 +71,71 @@
 
         <!--Title on the main page-->
 
-        <h1 class="bigpageheader">Star</h1>
-        <!--<h2 class="smallpageheader">Geography of the planets</h2>-->
-
-        <!--The main page article-->
-
-        <section class="maincontent">
-            <div class="articlediv">
-                <div class="captionbox right" style="width:242px">
-                    <img class="articleimage" src="../assets/images/stars/sun.jpg" alt="Sun" width="240" height="240">
-                    <p class="caption">The Sun, a G-type star</p>
+        <div class="maincolumn">
+            <h1 class="bigpageheader">Star</h1>
+            <!--<h2 class="smallpageheader">Geography of the planets</h2>-->
+         
+            <!--The main page article-->
+         
+            <section class="maincontent">
+                <div class="articlediv">
+                    <div class="captionbox right" style="width:242px">
+                        <img class="articleimage" src="../assets/images/stars/sun.jpg" alt="Sun" width="240" height="240">
+                        <p class="caption">The Sun, a G-type star</p>
+                    </div>
+                    <p class="paragraph">
+                        A star is a celestial body that consists of plasma held by it's gravity and emits light. 
+                        The Sun is the closest star to <a href="earth.html">Earth</a>. 
+                        There are an estimated 10^22 to 10^24 stars in the universe, but only around 4,000 can be seen with the naked eye.
+                    </p>
+                    <p class="paragraph">
+                        Stars are formed when a nebula collapses by it's own gravity. 
+                        During it's life it fuses hydrogen into helium and eventually dies, forming a white dwarf, a neutron star or a black hole, depending on a star's mass.
+                    </p>
                 </div>
+                <h2 class="paragraphheader" id="Classification">Classification</h2>
                 <p class="paragraph">
-                    A star is a celestial body that consists of plasma held by it's gravity and emits light. 
-                    The Sun is the closest star to <a href="earth.html">Earth</a>. 
-                    There are an estimated 10^22 to 10^24 stars in the universe, but only around 4,000 can be seen with the naked eye.
+                    Stars are classified based on their spectral characteristics. 
+                    In order from hottest to coldest, they are: O, B, A, F, G, K and M. 
+                    The Sun is a G-type star. 
+                    The most common stars are M stars, making up around 75% of all main-sequence stars, while O stars are less than one in a million.
                 </p>
-                <p class="paragraph">
-                    Stars are formed when a nebula collapses by it's own gravity. 
-                    During it's life it fuses hydrogen into helium and eventually dies, forming a white dwarf, a neutron star or a black hole, depending on a star's mass.
-                </p>
-            </div>
-            <h2 class="paragraphheader" id="Classification">Classification</h2>
-            <p class="paragraph">
-                Stars are classified based on their spectral characteristics. 
-                In order from hottest to coldest, they are: O, B, A, F, G, K and M. 
-                The Sun is a G-type star. 
-                The most common stars are M stars, making up around 75% of all main-sequence stars, while O stars are less than one in a million.
-            </p>
-            <div class="wrapper">
-                <table>
-                    <tr class="firstrow">
-                        <th>Class</th><th>Effective temperature</th><th>Main-sequence mass</th><th>Main-sequence radius</th><th>Main-sequence luminosity</th><th>Fraction of main-sequence stars</th><th>Example main-sequence star</th>
-                    </tr>
-                    <tr>
-                        <th>O</th><th>≥ 30,000 K</th><th>≥ 16 M☉</th><th>≥ 6.6 R☉</th><th>≥ 30,000 L☉</th><th>~0.00003%</th><th>Mu Columbae</th>
-                    </tr>
-                    <tr>
-                        <th>B</th><th>10,000-30,000 K</th><th>2.1-16 M☉</th><th>1.8-6.6 R☉</th><th>25-30,000 L☉</th><th>0.13%</th><th>Regulus</th>
-                    </tr>
-                    <tr>
-                        <th>A</th><th>7,500-10,000 K</th><th>1.4-2.1 M☉</th><th>1.4-1.8 R☉</th><th>5-25 L☉</th><th>0.6%</th><th>Sirius A</th>
-                    </tr>
-                    <tr>
-                        <th>F</th><th>6,000-7,500 K</th><th>1.04-1.4 M☉</th><th>1.15-1.4 R☉</th><th>1.5-5 L☉</th><th>3%</th><th>Procyon A</th>
-                    </tr>
-                    <tr>
-                        <th>G</th><th>5,200-6,000 K</th><th>0.8-1.04 M☉</th><th>0.96-1.15 R☉</th><th>0.6-1.5 L☉</th><th>7.6%</th><th>Sun</th>
-                    </tr>
-                    <tr>
-                        <th>K</th><th>3,700-5,200 K</th><th>0.45-0.8 M☉</th><th>0.7-0.96 R☉</th><th>0.08-0.6 L☉</th><th>12.1%</th><th>Epsilon Indi</th>
-                    </tr>
-                    <tr>
-                        <th>M</th><th>2,400-3,700 K</th><th>0.08-0.45 M☉</th><th>≤ 0.7 R☉</th><th>≤ 0.08 L☉</th><th>76.45%</th><th>Proxima Centauri</th>
-                    </tr>
-                </table>
-            </div>
-            <h4 id="ExternalLinks">External links</h4>
-            <ul>
-                <li>
-                    <a href="https://en.wikipedia.org/wiki/Star">https://en.wikipedia.org/wiki/Star</a>
-                </li>
-            </ul>
-        </section>
+                <div class="wrapper">
+                    <table>
+                        <tr class="firstrow">
+                            <th>Class</th><th>Effective temperature</th><th>Main-sequence mass</th><th>Main-sequence radius</th><th>Main-sequence luminosity</th><th>Fraction of main-sequence stars</th><th>Example main-sequence star</th>
+                        </tr>
+                        <tr>
+                            <th>O</th><th>≥ 30,000 K</th><th>≥ 16 M☉</th><th>≥ 6.6 R☉</th><th>≥ 30,000 L☉</th><th>~0.00003%</th><th>Mu Columbae</th>
+                        </tr>
+                        <tr>
+                            <th>B</th><th>10,000-30,000 K</th><th>2.1-16 M☉</th><th>1.8-6.6 R☉</th><th>25-30,000 L☉</th><th>0.13%</th><th>Regulus</th>
+                        </tr>
+                        <tr>
+                            <th>A</th><th>7,500-10,000 K</th><th>1.4-2.1 M☉</th><th>1.4-1.8 R☉</th><th>5-25 L☉</th><th>0.6%</th><th>Sirius A</th>
+                        </tr>
+                        <tr>
+                            <th>F</th><th>6,000-7,500 K</th><th>1.04-1.4 M☉</th><th>1.15-1.4 R☉</th><th>1.5-5 L☉</th><th>3%</th><th>Procyon A</th>
+                        </tr>
+                        <tr>
+                            <th>G</th><th>5,200-6,000 K</th><th>0.8-1.04 M☉</th><th>0.96-1.15 R☉</th><th>0.6-1.5 L☉</th><th>7.6%</th><th>Sun</th>
+                        </tr>
+                        <tr>
+                            <th>K</th><th>3,700-5,200 K</th><th>0.45-0.8 M☉</th><th>0.7-0.96 R☉</th><th>0.08-0.6 L☉</th><th>12.1%</th><th>Epsilon Indi</th>
+                        </tr>
+                        <tr>
+                            <th>M</th><th>2,400-3,700 K</th><th>0.08-0.45 M☉</th><th>≤ 0.7 R☉</th><th>≤ 0.08 L☉</th><th>76.45%</th><th>Proxima Centauri</th>
+                        </tr>
+                    </table>
+                </div>
+                <h4 id="ExternalLinks">External links</h4>
+                <ul>
+                    <li>
+                        <a href="https://en.wikipedia.org/wiki/Star">https://en.wikipedia.org/wiki/Star</a>
+                    </li>
+                </ul>
+            </section>
+        </div>
 
         <!--A footer-->
 
